<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.goldenteamproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_dialy_meal"
        android:name="com.example.goldenteamproject.ui.DailyMeal.DailyMealFragment"
        android:label="@string/dialy_meal"
        tools:layout="@layout/fragment_daily_meal" />

    <fragment
        android:id="@+id/nav_favourite"
        android:name="com.example.goldenteamproject.ui.favourite.FavouriteFragment"
        android:label="@string/favourite"
        tools:layout="@layout/fragment_favourite" />
</navigation>