<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.wellcomeActivity">

    <ImageView
        android:foreground="@drawable/foreground_design"
        android:id="@+id/wellcomeActivityImg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/food"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/appNameWellcomeActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lobster"
        android:text="@string/new_food_app"
        android:textAlignment="center"
        android:textColor="#FFF4C7"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".4" />

    <TextView
        android:id="@+id/descriptionOfWellcomePage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_explore_new_in_your_food"
        android:textAlignment="center"
        android:textColor="#fbfbfb"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appNameWellcomeActivity"

        />

    <Button
        android:id="@+id/registerButtonOfRegisterationActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:text="Register"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="register"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionOfWellcomePage"
        app:layout_constraintVertical_bias=".7"
        app:layout_constraintWidth_percent=".8"
        android:background="@drawable/btn_bg_design_"/>

    <TextView
        android:id="@+id/signInButtonOfWellcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="#fbfbfb"
        android:textSize="16sp"
        android:textStyle="bold"
        android:onClick="signIn"
        app:layout_constraintBottom_toBottomOf="@+id/wellcomeActivityImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButtonOfRegisterationActivity"
        />



</androidx.constraintlayout.widget.ConstraintLayout>